添加spa-vendor chunk

--- a/src/pages/test-router/test-router.html
+++ b/src/pages/test-router/test-router.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- {{ 'js' | addAssets() }} -->
+    <!-- {{ 'js' | addAssets(['manifest', 'vendor', 'spa-vendor', 'commons']) }} -->
   </body>
 </html>
